# cda-ui

./: .gitignore  Cargo.toml  LICENSE  README.md  REUSE.toml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.tauri.ts  vite.config.ts
.github/actions/install-linux-deps/: action.yml
.github/workflows/: ci.yml  pre-commit.yaml  release.yml
.reuse/templates/: cda_ui.jinja2
src/: App.css  App.vue  env.d.ts  index.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.ico.license
src-tauri/src/: cda_manager.rs  commands.rs  lib.rs  main.rs
src/api/: cdaProcess.ts  client.ts
src/components/: AuthScripts.vue  ConfigurationsTab.vue  DataTab.vue  EcuDetailPanel.vue  EcuTree.vue  ExecResultPanel.vue  ExecutionList.vue  FaultsTab.vue  GenericServiceTab.vue  JsonField.vue  LocksTab.vue  LoginPanel.vue  ModesTab.vue  OperationsTab.vue  OverviewTab.vue  ParamField.vue  ParameterForm.vue  StatusBit.vue
src/components/login/: CdaLogViewer.vue  CdaStatusBadge.vue  ConnectBundled.vue  ConnectLocalExe.vue  ConnectRemote.vue
src/lib/: docsParser.ts  paramUtils.ts  scriptRunner.ts
src/types/: sovd.ts
