# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Elena Gantner

[package]
name = "cda-ui"
version = "0.1.0"
description = "CDA - Classic Diagnostic Adapter"
authors = ["Elena Gantner"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
