# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Elena Gantner

[package]
name = "cda-ui"
version = "0.1.0"
description = "CDA - Classic Diagnostic Adapter"
authors = ["Elena Gantner"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
bundled-cda = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "time", "io-util"] }
log = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[lints]
workspace = true
